// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[date-functions.eachIntervalEndDateForMonth] should generate end dates for max 7 days intervals of the months for April 2017 1`] = `
Array [
  Array [
    2017-04-01T13:00:00.000Z,
    2017-04-07T13:00:00.000Z,
  ],
  Array [
    2017-04-08T13:00:00.000Z,
    2017-04-14T13:00:00.000Z,
  ],
  Array [
    2017-04-15T13:00:00.000Z,
    2017-04-21T13:00:00.000Z,
  ],
  Array [
    2017-04-22T13:00:00.000Z,
    2017-04-28T13:00:00.000Z,
  ],
  Array [
    2017-04-29T13:00:00.000Z,
    2017-04-30T13:00:00.000Z,
  ],
]
`;

exports[`[date-functions.eachIntervalEndDateForMonth] should generate end dates for max 7 days intervals of the months for February 2017 1`] = `
Array [
  Array [
    2017-02-01T13:00:00.000Z,
    2017-02-07T13:00:00.000Z,
  ],
  Array [
    2017-02-08T13:00:00.000Z,
    2017-02-14T13:00:00.000Z,
  ],
  Array [
    2017-02-15T13:00:00.000Z,
    2017-02-21T13:00:00.000Z,
  ],
  Array [
    2017-02-22T13:00:00.000Z,
    2017-02-28T13:00:00.000Z,
  ],
]
`;

exports[`[date-functions.eachIntervalEndDateForMonth] should generate end dates for max 7 days intervals of the months for February 2020 (leap year) 1`] = `
Array [
  Array [
    2020-02-01T13:00:00.000Z,
    2020-02-07T13:00:00.000Z,
  ],
  Array [
    2020-02-08T13:00:00.000Z,
    2020-02-14T13:00:00.000Z,
  ],
  Array [
    2020-02-15T13:00:00.000Z,
    2020-02-21T13:00:00.000Z,
  ],
  Array [
    2020-02-22T13:00:00.000Z,
    2020-02-28T13:00:00.000Z,
  ],
  Array [
    2020-02-29T13:00:00.000Z,
    2020-02-29T13:00:00.000Z,
  ],
]
`;

exports[`[date-functions.eachIntervalEndDateForMonth] should generate end dates for max 7 days intervals of the months for January 2017 1`] = `
Array [
  Array [
    2017-01-01T13:00:00.000Z,
    2017-01-07T13:00:00.000Z,
  ],
  Array [
    2017-01-08T13:00:00.000Z,
    2017-01-14T13:00:00.000Z,
  ],
  Array [
    2017-01-15T13:00:00.000Z,
    2017-01-21T13:00:00.000Z,
  ],
  Array [
    2017-01-22T13:00:00.000Z,
    2017-01-28T13:00:00.000Z,
  ],
  Array [
    2017-01-29T13:00:00.000Z,
    2017-01-31T13:00:00.000Z,
  ],
]
`;

exports[`[date-functions.eachIntervalStartDateForMonth] should generate start dates for max 7 days intervals of the months for April 2017 1`] = `
Array [
  2017-04-01T13:00:00.000Z,
  2017-04-08T13:00:00.000Z,
  2017-04-15T13:00:00.000Z,
  2017-04-22T13:00:00.000Z,
  2017-04-29T13:00:00.000Z,
]
`;

exports[`[date-functions.eachIntervalStartDateForMonth] should generate start dates for max 7 days intervals of the months for February 2017 1`] = `
Array [
  2017-02-01T13:00:00.000Z,
  2017-02-08T13:00:00.000Z,
  2017-02-15T13:00:00.000Z,
  2017-02-22T13:00:00.000Z,
]
`;

exports[`[date-functions.eachIntervalStartDateForMonth] should generate start dates for max 7 days intervals of the months for February 2020 (leap year) 1`] = `
Array [
  2020-02-01T13:00:00.000Z,
  2020-02-08T13:00:00.000Z,
  2020-02-15T13:00:00.000Z,
  2020-02-22T13:00:00.000Z,
  2020-02-29T13:00:00.000Z,
]
`;

exports[`[date-functions.eachIntervalStartDateForMonth] should generate start dates for max 7 days intervals of the months for January 2017 1`] = `
Array [
  2017-01-01T13:00:00.000Z,
  2017-01-08T13:00:00.000Z,
  2017-01-15T13:00:00.000Z,
  2017-01-22T13:00:00.000Z,
  2017-01-29T13:00:00.000Z,
]
`;

exports[`[date-functions.eachMonthOfInterval] should generate every month between start year and end year 1`] = `
Array [
  2017-01-01T13:00:00.000Z,
  2017-02-01T13:00:00.000Z,
  2017-03-01T13:00:00.000Z,
  2017-04-01T12:00:00.000Z,
  2017-05-01T12:00:00.000Z,
  2017-06-01T12:00:00.000Z,
  2017-07-01T12:00:00.000Z,
  2017-08-01T12:00:00.000Z,
  2017-09-01T12:00:00.000Z,
  2017-10-01T12:00:00.000Z,
  2017-11-01T13:00:00.000Z,
  2017-12-01T13:00:00.000Z,
  2018-01-01T13:00:00.000Z,
  2018-02-01T13:00:00.000Z,
  2018-03-01T13:00:00.000Z,
  2018-04-01T12:00:00.000Z,
  2018-05-01T12:00:00.000Z,
  2018-06-01T12:00:00.000Z,
  2018-07-01T12:00:00.000Z,
  2018-08-01T12:00:00.000Z,
  2018-09-01T12:00:00.000Z,
  2018-10-01T12:00:00.000Z,
  2018-11-01T13:00:00.000Z,
  2018-12-01T13:00:00.000Z,
  2019-01-01T13:00:00.000Z,
  2019-02-01T13:00:00.000Z,
  2019-03-01T13:00:00.000Z,
  2019-04-01T12:00:00.000Z,
  2019-05-01T12:00:00.000Z,
  2019-06-01T12:00:00.000Z,
  2019-07-01T12:00:00.000Z,
  2019-08-01T12:00:00.000Z,
  2019-09-01T12:00:00.000Z,
  2019-10-01T12:00:00.000Z,
  2019-11-01T13:00:00.000Z,
  2019-12-01T13:00:00.000Z,
]
`;

exports[`[date-functions.eachMonthOfInterval] should generate every month between start year and end year 2`] = `
Array [
  2017-01-01T13:00:00.000Z,
  2017-02-01T13:00:00.000Z,
  2017-03-01T13:00:00.000Z,
  2017-04-01T12:00:00.000Z,
  2017-05-01T12:00:00.000Z,
  2017-06-01T12:00:00.000Z,
  2017-07-01T12:00:00.000Z,
  2017-08-01T12:00:00.000Z,
  2017-09-01T12:00:00.000Z,
  2017-10-01T12:00:00.000Z,
  2017-11-01T13:00:00.000Z,
  2017-12-01T13:00:00.000Z,
]
`;
